V2: FBOption with FBExpressibleByArgument values

--- a/FBArgumentParser.xcodeproj/xcshareddata/xcschemes/FBRepeat.xcscheme
+++ b/FBArgumentParser.xcodeproj/xcshareddata/xcschemes/FBRepeat.xcscheme
@@ -67,6 +67,14 @@
             argument = "ahahah"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--count"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "10"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
